Fix broken stylesheet: use box-shadow instead of transform keyframe

--- a/src/panorama/react/hud_main/pages/profile/awaken.less
+++ b/src/panorama/react/hud_main/pages/profile/awaken.less
@@ -195,19 +195,19 @@
   horizontal-align: center;
 }
 
-/* 老虎机滚动停下时弹一下，强化“随机定格”的反馈 */
-@keyframes AwakenSettlePop {
+/* 老虎机滚动停下时金光一闪，强化“随机定格”反馈；box-shadow 是 Panorama 支持的动画属性 */
+@keyframes AwakenSettleGlow {
   0% {
-    transform: scale3d(1.12, 1.12, 1);
+    box-shadow: 0 0 14px 4px #ffd24aff;
   }
   100% {
-    transform: scale3d(1, 1, 1);
+    box-shadow: 0 0 0px 0px #ffd24a00;
   }
 }
 
 .awaken-card-settled {
-  animation-name: AwakenSettlePop;
-  animation-duration: 0.18s;
+  animation-name: AwakenSettleGlow;
+  animation-duration: 0.4s;
   animation-timing-function: ease-out;
 }
 
